@@ -34,6 +34,8 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
   * Sort backlinks deterministically, by falling back to sorting by href
     if the link text is identical
   * Add a $config{deterministic} option and use it for the docwiki
+  * haiku: if deterministic build is requested, return a hard-coded haiku
+  * If deterministic build is requested, return a hard-coded haiku
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
